--- a/package.json
+++ b/package.json
@@ -9,9 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.2",
+    "framer-motion": "^7.3.2",
+    "globby": "^13.1.2",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "12.2.5",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
+    "rc-drawer": "^5.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
+    "react-icons": "^4.4.0",
+    "react-modal-video": "^1.2.10",
+    "react-multi-carousel": "^2.8.2",
+    "react-scroll": "^1.8.7",
+    "react-stickynode": "^4.1.0",
+    "theme-ui": "^0.14.7",
+    "typeface-dm-sans": "^1.1.13"
   },
   "devDependencies": {
     "@types/node": "18.7.15",
