--- a/package.json
+++ b/package.json
@@ -1,48 +1,25 @@
 {
   "name": "help-the-children",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "dotenv": "^16.0.2",
-    "framer-motion": "^7.3.2",
-    "globby": "^13.1.2",
-    "isomorphic-unfetch": "^3.1.0",
-    "next": "12.2.5",
-    "next-compose-plugins": "^2.2.1",
-    "next-optimized-images": "^2.6.2",
-    "rc-drawer": "^5.1.0",
-    "react": "18.2.0",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "18.2.0",
-    "react-ga": "^3.3.1",
-    "react-icons": "^4.4.0",
-    "react-modal-video": "^1.2.10",
-    "react-multi-carousel": "^2.8.2",
-    "react-scroll": "^1.8.7",
-    "react-stickynode": "^4.1.0",
-    "theme-ui": "^0.14.7",
-    "typeface-dm-sans": "^1.1.13"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.15",
-    "@types/react": "18.0.18",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-next": "12.2.5",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^22.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.31.7",
-    "prettier": "^2.7.1",
-    "typescript": "*"
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.1.0",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0"
   }
 }
